--- a/recipes/spaghetti-carbonara.html
+++ b/recipes/spaghetti-carbonara.html
@@ -13,7 +13,7 @@
     />
     <h2>Description</h2>
     <p>
-      Spaghetti Carbonara is a classic Italian pasta dish known for its creamy texture and rich flavors. Made with simple ingredients like eggs, cheese, pancetta, and pepper, it’s a quick yet indulgent meal that can be prepared in under 30 minutes. The silky sauce is created by tossing hot pasta with a mixture of raw eggs and grated Pecorino Romano cheese, which are gently cooked by the heat of the pasta. This dish is perfect for a comforting weeknight dinner or an impressive meal for guests.
+      Spaghetti Carbonara is a classic Italian pasta dish known for its creamy texture and rich flavors. Made with simple ingredients like eggs, cheese, pancetta, and pepper, it's a quick yet indulgent meal that can be prepared in under 30 minutes. The silky sauce is created by tossing hot pasta with a mixture of raw eggs and grated Pecorino Romano cheese, which are gently cooked by the heat of the pasta. This dish is perfect for a comforting weeknight dinner or an impressive meal for guests.
     </p>
     <h2>Ingredients</h2>
     <ul>
