--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -51,6 +51,7 @@
       <li>Remove from the oven and let the lasagna sit for about 10 minutes before serving.</li>
       <li>Garnish with fresh basil or parsley if desired. Serve and enjoy!</li>
     </ol>
+    <a href="../index.html">Back to main</a>
   </body>
 </html>
 
