--- a/recipes/spaghetti-carbonara.html
+++ b/recipes/spaghetti-carbonara.html
@@ -36,5 +36,6 @@
       <li>Season with salt and freshly ground black pepper to taste.</li>
       <li>Serve immediately, garnished with fresh parsley if desired.</li>
     </ol>
+    <a href="../index.html">Back to main</a>
   </body>
 </html>
